--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,7 @@ project:
 
 website:
   title: "Farid Musayev"
+  background: white
   site-url: https://faridmusayev.github.io
   navbar:
     pinned: false
